--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-react",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://sananparvez.github.io/portfolio",
   "type": "module",
   "scripts": {
     "dev": "vite",
